initial changes to support dense vectors off-heap stats